; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_top.c_do_catch_errors.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/extr_top.c_do_catch_errors.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ui_out = type { i32 }
%struct.catch_errors_args = type { i32 (i32)*, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ui_out*, i8*)* @do_catch_errors to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @do_catch_errors(%struct.ui_out* %0, i8* %1) #0 {
  %3 = alloca %struct.ui_out*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.catch_errors_args*, align 8
  store %struct.ui_out* %0, %struct.ui_out** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.catch_errors_args*
  store %struct.catch_errors_args* %7, %struct.catch_errors_args** %5, align 8
  %8 = load %struct.catch_errors_args*, %struct.catch_errors_args** %5, align 8
  %9 = getelementptr inbounds %struct.catch_errors_args, %struct.catch_errors_args* %8, i32 0, i32 0
  %10 = load i32 (i32)*, i32 (i32)** %9, align 8
  %11 = load %struct.catch_errors_args*, %struct.catch_errors_args** %5, align 8
  %12 = getelementptr inbounds %struct.catch_errors_args, %struct.catch_errors_args* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 8
  %14 = call i32 %10(i32 %13)
  ret i32 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
